[GH-32] refactor: updates docker image versions